samples/_failures_safe/1761708164_329932_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b505ed0.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_2b505ed0.c:186:9: error: expected identifier at end of input
  186 |         graph->nodes[i]->
      |         ^~~~~
./samples/SAFE/__tmp_2b505ed0.c:186:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b505ed0.c:186:9: error: expected declaration or statement at end of input
